# metaMLG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  pyproject.toml
.github/workflows/: cicd.yml  pypi.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  tmp.txt
src/metamlg/: __init__.py
tests/: test_metamlg.py
