[tool.poetry]
name = "metamlg"
version = "0.1.0"
description = "MLG for metagenomics"
authors = ["js2264"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
matplotlib = ">=3"

[tool.poetry.dev-dependencies]
pytest = ">= 7.4"
pytest-cov = ">= 4.1"
myst-nb = ">= 1.0.0"
sphinx-autoapi = ">= 3.0.0"
sphinx-rtd-theme = ">= 2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
