[tool.poetry]
name = "metamlg"
version = "0.2.0"
description = "MLG for meta"
authors = ["js2264"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3"

[tool.poetry.dev-dependencies]
pytest = ">= 7.4"
pytest-cov = ">= 4.1"
myst-nb = ">= 1.0.0"
sphinx-autoapi = ">= 3.0.0"
sphinx-rtd-theme = ">= 2.0.0"
python-semantic-release = ">= 8"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

